indented/garbage/parser.output
Nonterminals useless in grammar

   single_input


Terminals unused in grammar

   TOK_STUFF
   TOK_REST
   MINUS_GREATER
   LESS_GREATER


Rules useless in grammar

  168 single_input: NEWLINE
  169             | simple_stmt
  170             | compound_stmt NEWLINE


State 37 conflicts: 1 shift/reduce
State 45 conflicts: 1 reduce/reduce
State 166 conflicts: 1 shift/reduce, 2 reduce/reduce
State 167 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 194 conflicts: 1 shift/reduce
State 204 conflicts: 1 shift/reduce
State 205 conflicts: 1 shift/reduce
State 214 conflicts: 2 reduce/reduce
State 216 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce
State 218 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce
State 233 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: eval_input
    2      | file_input

    3 eval_input: testlist END
    4           | testlist NEWLINE END

    5 file_input: file_inp END

    6 file_inp: file_inp NEWLINE
    7         | file_inp stmt
    8         | stmt
    9         | NEWLINE

   10 stmt: simple_stmt
   11     | compound_stmt

   12 stmts: stmts stmt
   13      | stmt

   14 small_stmts: small_stmts SEMICOLON small_stmt
   15            | SEMICOLON small_stmt

   16 simple_stmt: small_stmt small_stmts NEWLINE
   17            | small_stmt small_stmts SEMICOLON NEWLINE
   18            | small_stmt NEWLINE
   19            | small_stmt SEMICOLON NEWLINE

   20 small_stmt: expr_stmt
   21           | T_PASS
   22           | flow_stmt
   23           | import_stmt
   24           | funcall

   25 import_stmt: import_name
   26            | import_from

   27 import_name: IMPORT dotted_as_name

   28 import_from: FROM dotted_name IMPORT import_as_name
   29            | FROM dotted_name IMPORT MULTIPLY

   30 import_as_name: T_NAME T_AS T_NAME
   31               | T_NAME

   32 dotted_as_name: dotted_name T_AS T_NAME
   33               | dotted_name

   34 dotted_name: dotted_name T_DOT T_NAME
   35            | T_NAME

   36 testlist_star_exprs_equal: testlist_star_exprs_equal EQUAL testlist_star_expr
   37                          | EQUAL testlist_star_expr
   38                          | /* empty */

   39 expr_stmt: testlist_star_expr augassign testlist
   40          | testlist_star_expr testlist_star_exprs_equal

   41 testlist_star_exprs_comma: testlist_star_exprs_comma COMMA test COMMA
   42                          | testlist_star_exprs_comma COMMA star_expr COMMA
   43                          | testlist_star_exprs_comma COMMA test
   44                          | testlist_star_exprs_comma COMMA star_expr
   45                          | COMMA test COMMA
   46                          | COMMA test
   47                          | COMMA star_expr COMMA
   48                          | COMMA star_expr

   49 testlist_star_expr: test testlist_star_exprs_comma COMMA
   50                   | test testlist_star_exprs_comma
   51                   | star_expr testlist_star_exprs_comma COMMA
   52                   | star_expr testlist_star_exprs_comma
   53                   | test COMMA
   54                   | test
   55                   | star_expr COMMA
   56                   | star_expr

   57 augassign: PLUS_EQUAL
   58          | MINUS_EQUAL
   59          | STAR_EQUAL
   60          | AT_EQUAL
   61          | R_SLASH_EQUAL
   62          | PERCENT_EQUAL
   63          | AND_EQUAL
   64          | BAR_EQUAL
   65          | XOR_EQUAL
   66          | LESS_LESS_EQUAL
   67          | GREATER_GREATER_EQUAL
   68          | STAR_STAR_EQUAL
   69          | SLASH_SLASH_EQUAL

   70 flow_stmt: T_BREAK
   71          | T_CONTINUE
   72          | T_RETURN testlist
   73          | T_RETURN

   74 compound_stmt: if_stmt
   75              | while_stmt
   76              | for_stmt
   77              | funcdef
   78              | classdef

   79 funcdef: DEF T_NAME L_PAREN parameters R_PAREN COLON suite
   80        | DEF T_NAME L_PAREN R_PAREN COLON suite

   81 funcall: T_NAME L_PAREN parameters R_PAREN
   82        | T_NAME L_PAREN R_PAREN

   83 parameters: parameters COMMA T_NAME
   84           | T_NAME

   85 if_stmt: T_IF test COLON suite elif_else_stmt

   86 elif_else_stmt: T_ELSE COLON suite
   87               | elif_else_stmt T_ELIF COLON suite
   88               | /* empty */

   89 while_stmt: T_WHILE test COLON suite T_ELSE COLON suite
   90           | T_WHILE test COLON suite

   91 for_stmt: T_FOR exprlist T_IN testlist COLON suite T_ELSE COLON suite
   92         | T_FOR exprlist T_IN testlist COLON suite

   93 suite: NEWLINE INDENT stmts DEDENT
   94      | simple_stmt

   95 test: or_test T_IF or_test T_ELSE test
   96     | or_test

   97 or_test: or_test LIT_OR and_test
   98        | and_test

   99 and_test: and_test LIT_AND not_test
  100         | not_test

  101 not_test: LIT_NOT not_test
  102         | comparison

  103 comparison: comparison comp_op expr
  104           | expr

  105 comp_op: GREATER
  106        | LESS
  107        | EQUAL_EQUAL
  108        | GREATER_EQUAL
  109        | LESS_EQUAL
  110        | EXCL_EQUAL
  111        | T_IN
  112        | NOT_IN
  113        | T_IS
  114        | IS_NOT

  115 star_expr: MULTIPLY expr

  116 expr: expr OR xor_expr
  117     | xor_expr

  118 xor_expr: xor_expr XOR and_expr
  119         | and_expr

  120 and_expr: and_expr AND shift_expr
  121         | shift_expr

  122 shift_expr: shift_expr LESS_LESS arith_expr
  123           | shift_expr GREATER_GREATER arith_expr
  124           | arith_expr

  125 arith_expr: arith_expr PLUS term
  126           | arith_expr MINUS term
  127           | term

  128 term: term R_SLASH_SLASH factor
  129     | term MULTIPLY factor
  130     | term T_AT factor
  131     | term R_SLASH factor
  132     | term PERCENT factor
  133     | factor

  134 factor: PLUS factor
  135       | MINUS factor
  136       | TILDA factor
  137       | power

  138 power: atom STAR_STAR factor
  139      | atom

  140 atom: T_NAME
  141     | L_PAREN test R_PAREN
  142     | L_PAREN star_expr R_PAREN
  143     | T_NUMBER
  144     | T_STRING
  145     | T_DOT_DOT_DOT
  146     | NONE
  147     | TRUE
  148     | FALSE

  149 expr_star_exprs: expr_star_exprs COMMA expr COMMA
  150                | expr_star_exprs COMMA expr
  151                | expr_star_exprs COMMA star_expr COMMA
  152                | expr_star_exprs COMMA star_expr
  153                | COMMA expr COMMA
  154                | COMMA expr
  155                | COMMA star_expr COMMA
  156                | COMMA star_expr

  157 exprlist: expr expr_star_exprs
  158         | expr

  159 tests: tests COMMA test COMMA
  160      | tests COMMA test
  161      | COMMA test COMMA
  162      | COMMA test

  163 testlist: test tests
  164         | test

  165 classdef: CLASS T_NAME COLON suite
  166         | CLASS T_NAME L_PAREN R_PAREN COLON suite
  167         | CLASS T_NAME L_PAREN parameters R_PAREN COLON suite


Terminals, with rules where they appear

$end (0) 0
error (256)
NONE (258) 146
TRUE (259) 147
FALSE (260) 148
NEWLINE (261) 4 6 9 16 17 18 19 93
INDENT (262) 93
DEDENT (263) 93
END (264) 3 4 5
TOK_STUFF (265)
TOK_REST (266)
T_NUMBER (267) 143
T_STRING (268) 144
T_NAME (269) 30 31 32 34 35 79 80 81 82 83 84 140 165 166 167
PLUS (270) 125 134
MULTIPLY (271) 29 115 129
MINUS (272) 126 135
OR (273) 116
TILDA (274) 136
LESS_LESS (275) 122
GREATER_GREATER (276) 123
STAR_STAR (277) 138
R_SLASH (278) 131
R_SLASH_SLASH (279) 128
T_AT (280) 130
PERCENT (281) 132
AND (282) 120
XOR (283) 118
DEF (284) 79 80
MINUS_GREATER (285)
L_PAREN (286) 79 80 81 82 141 142 166 167
R_PAREN (287) 79 80 81 82 141 142 166 167
EQUAL (288) 36 37
COMMA (289) 41 42 43 44 45 46 47 48 49 51 53 55 83 149 150 151 152
    153 154 155 156 159 160 161 162
COLON (290) 79 80 85 86 87 89 90 91 92 165 166 167
SEMICOLON (291) 14 15 17 19
PLUS_EQUAL (292) 57
MINUS_EQUAL (293) 58
STAR_EQUAL (294) 59
AT_EQUAL (295) 60
R_SLASH_EQUAL (296) 61
PERCENT_EQUAL (297) 62
AND_EQUAL (298) 63
BAR_EQUAL (299) 64
XOR_EQUAL (300) 65
LESS_LESS_EQUAL (301) 66
GREATER_GREATER_EQUAL (302) 67
STAR_STAR_EQUAL (303) 68
SLASH_SLASH_EQUAL (304) 69
T_PASS (305) 21
T_BREAK (306) 70
T_CONTINUE (307) 71
T_RETURN (308) 72 73
IMPORT (309) 27 28 29
FROM (310) 28 29
T_DOT (311) 34
T_DOT_DOT_DOT (312) 145
T_AS (313) 30 32
T_IF (314) 85 95
T_ELIF (315) 87
T_ELSE (316) 86 89 91 95
T_WHILE (317) 89 90
T_FOR (318) 91 92
T_IN (319) 91 92 111
CLASS (320) 165 166 167
LIT_OR (321) 97
LIT_AND (322) 99
LIT_NOT (323) 101
LESS (324) 106
GREATER (325) 105
EQUAL_EQUAL (326) 107
GREATER_EQUAL (327) 108
LESS_EQUAL (328) 109
LESS_GREATER (329)
EXCL_EQUAL (330) 110
NOT_IN (331) 112
T_IS (332) 113
IS_NOT (333) 114


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
start (80)
    on left: 1 2, on right: 0
eval_input (81)
    on left: 3 4, on right: 1
file_input (82)
    on left: 5, on right: 2
file_inp (83)
    on left: 6 7 8 9, on right: 5 6 7
stmt (84)
    on left: 10 11, on right: 7 8 12 13
stmts (85)
    on left: 12 13, on right: 12 93
small_stmts (86)
    on left: 14 15, on right: 14 16 17
simple_stmt (87)
    on left: 16 17 18 19, on right: 10 94
small_stmt (88)
    on left: 20 21 22 23 24, on right: 14 15 16 17 18 19
import_stmt (89)
    on left: 25 26, on right: 23
import_name (90)
    on left: 27, on right: 25
import_from (91)
    on left: 28 29, on right: 26
import_as_name (92)
    on left: 30 31, on right: 28
dotted_as_name (93)
    on left: 32 33, on right: 27
dotted_name (94)
    on left: 34 35, on right: 28 29 32 33 34
testlist_star_exprs_equal (95)
    on left: 36 37 38, on right: 36 40
expr_stmt (96)
    on left: 39 40, on right: 20
testlist_star_exprs_comma (97)
    on left: 41 42 43 44 45 46 47 48, on right: 41 42 43 44 49 50 51
    52
testlist_star_expr (98)
    on left: 49 50 51 52 53 54 55 56, on right: 36 37 39 40
augassign (99)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69, on right: 39
flow_stmt (100)
    on left: 70 71 72 73, on right: 22
compound_stmt (101)
    on left: 74 75 76 77 78, on right: 11
funcdef (102)
    on left: 79 80, on right: 77
funcall (103)
    on left: 81 82, on right: 24
parameters (104)
    on left: 83 84, on right: 79 81 83 167
if_stmt (105)
    on left: 85, on right: 74
elif_else_stmt (106)
    on left: 86 87 88, on right: 85 87
while_stmt (107)
    on left: 89 90, on right: 75
for_stmt (108)
    on left: 91 92, on right: 76
suite (109)
    on left: 93 94, on right: 79 80 85 86 87 89 90 91 92 165 166 167
test (110)
    on left: 95 96, on right: 41 43 45 46 49 50 53 54 85 89 90 95 141
    159 160 161 162 163 164
or_test (111)
    on left: 97 98, on right: 95 96 97
and_test (112)
    on left: 99 100, on right: 97 98 99
not_test (113)
    on left: 101 102, on right: 99 100 101
comparison (114)
    on left: 103 104, on right: 102 103
comp_op (115)
    on left: 105 106 107 108 109 110 111 112 113 114, on right: 103
star_expr (116)
    on left: 115, on right: 42 44 47 48 51 52 55 56 142 151 152 155
    156
expr (117)
    on left: 116 117, on right: 103 104 115 116 149 150 153 154 157
    158
xor_expr (118)
    on left: 118 119, on right: 116 117 118
and_expr (119)
    on left: 120 121, on right: 118 119 120
shift_expr (120)
    on left: 122 123 124, on right: 120 121 122 123
arith_expr (121)
    on left: 125 126 127, on right: 122 123 124 125 126
term (122)
    on left: 128 129 130 131 132 133, on right: 125 126 127 128 129
    130 131 132
factor (123)
    on left: 134 135 136 137, on right: 128 129 130 131 132 133 134
    135 136 138
power (124)
    on left: 138 139, on right: 137
atom (125)
    on left: 140 141 142 143 144 145 146 147 148, on right: 138 139
expr_star_exprs (126)
    on left: 149 150 151 152 153 154 155 156, on right: 149 150 151
    152 157
exprlist (127)
    on left: 157 158, on right: 91 92
tests (128)
    on left: 159 160 161 162, on right: 159 160 163
testlist (129)
    on left: 163 164, on right: 3 4 39 72 91 92
classdef (130)
    on left: 165 166 167, on right: 78


state 0

    0 $accept: . start $end

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    NEWLINE        shift, and go to state 4
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 7
    PLUS           shift, and go to state 8
    MULTIPLY       shift, and go to state 9
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    DEF            shift, and go to state 12
    L_PAREN        shift, and go to state 13
    T_PASS         shift, and go to state 14
    T_BREAK        shift, and go to state 15
    T_CONTINUE     shift, and go to state 16
    T_RETURN       shift, and go to state 17
    IMPORT         shift, and go to state 18
    FROM           shift, and go to state 19
    T_DOT_DOT_DOT  shift, and go to state 20
    T_IF           shift, and go to state 21
    T_WHILE        shift, and go to state 22
    T_FOR          shift, and go to state 23
    CLASS          shift, and go to state 24
    LIT_NOT        shift, and go to state 25

    start               go to state 26
    eval_input          go to state 27
    file_input          go to state 28
    file_inp            go to state 29
    stmt                go to state 30
    simple_stmt         go to state 31
    small_stmt          go to state 32
    import_stmt         go to state 33
    import_name         go to state 34
    import_from         go to state 35
    expr_stmt           go to state 36
    testlist_star_expr  go to state 37
    flow_stmt           go to state 38
    compound_stmt       go to state 39
    funcdef             go to state 40
    funcall             go to state 41
    if_stmt             go to state 42
    while_stmt          go to state 43
    for_stmt            go to state 44
    test                go to state 45
    or_test             go to state 46
    and_test            go to state 47
    not_test            go to state 48
    comparison          go to state 49
    star_expr           go to state 50
    expr                go to state 51
    xor_expr            go to state 52
    and_expr            go to state 53
    shift_expr          go to state 54
    arith_expr          go to state 55
    term                go to state 56
    factor              go to state 57
    power               go to state 58
    atom                go to state 59
    testlist            go to state 60
    classdef            go to state 61


state 1

  146 atom: NONE .

    $default  reduce using rule 146 (atom)


state 2

  147 atom: TRUE .

    $default  reduce using rule 147 (atom)


state 3

  148 atom: FALSE .

    $default  reduce using rule 148 (atom)


state 4

    9 file_inp: NEWLINE .

    $default  reduce using rule 9 (file_inp)


state 5

  143 atom: T_NUMBER .

    $default  reduce using rule 143 (atom)


state 6

  144 atom: T_STRING .

    $default  reduce using rule 144 (atom)


state 7

   81 funcall: T_NAME . L_PAREN parameters R_PAREN
   82        | T_NAME . L_PAREN R_PAREN
  140 atom: T_NAME .

    L_PAREN  shift, and go to state 62

    $default  reduce using rule 140 (atom)


state 8

  134 factor: PLUS . factor

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20

    factor  go to state 64
    power   go to state 58
    atom    go to state 59


state 9

  115 star_expr: MULTIPLY . expr

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20

    expr        go to state 65
    xor_expr    go to state 52
    and_expr    go to state 53
    shift_expr  go to state 54
    arith_expr  go to state 55
    term        go to state 56
    factor      go to state 57
    power       go to state 58
    atom        go to state 59


state 10

  135 factor: MINUS . factor

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20

    factor  go to state 66
    power   go to state 58
    atom    go to state 59


state 11

  136 factor: TILDA . factor

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20

    factor  go to state 67
    power   go to state 58
    atom    go to state 59


state 12

   79 funcdef: DEF . T_NAME L_PAREN parameters R_PAREN COLON suite
   80        | DEF . T_NAME L_PAREN R_PAREN COLON suite

    T_NAME  shift, and go to state 68


state 13

  141 atom: L_PAREN . test R_PAREN
  142     | L_PAREN . star_expr R_PAREN

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MULTIPLY       shift, and go to state 9
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20
    LIT_NOT        shift, and go to state 25

    test        go to state 69
    or_test     go to state 46
    and_test    go to state 47
    not_test    go to state 48
    comparison  go to state 49
    star_expr   go to state 70
    expr        go to state 51
    xor_expr    go to state 52
    and_expr    go to state 53
    shift_expr  go to state 54
    arith_expr  go to state 55
    term        go to state 56
    factor      go to state 57
    power       go to state 58
    atom        go to state 59


state 14

   21 small_stmt: T_PASS .

    $default  reduce using rule 21 (small_stmt)


state 15

   70 flow_stmt: T_BREAK .

    $default  reduce using rule 70 (flow_stmt)


state 16

   71 flow_stmt: T_CONTINUE .

    $default  reduce using rule 71 (flow_stmt)


state 17

   72 flow_stmt: T_RETURN . testlist
   73          | T_RETURN .

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20
    LIT_NOT        shift, and go to state 25

    $default  reduce using rule 73 (flow_stmt)

    test        go to state 71
    or_test     go to state 46
    and_test    go to state 47
    not_test    go to state 48
    comparison  go to state 49
    expr        go to state 51
    xor_expr    go to state 52
    and_expr    go to state 53
    shift_expr  go to state 54
    arith_expr  go to state 55
    term        go to state 56
    factor      go to state 57
    power       go to state 58
    atom        go to state 59
    testlist    go to state 72


state 18

   27 import_name: IMPORT . dotted_as_name

    T_NAME  shift, and go to state 73

    dotted_as_name  go to state 74
    dotted_name     go to state 75


state 19

   28 import_from: FROM . dotted_name IMPORT import_as_name
   29            | FROM . dotted_name IMPORT MULTIPLY

    T_NAME  shift, and go to state 73

    dotted_name  go to state 76


state 20

  145 atom: T_DOT_DOT_DOT .

    $default  reduce using rule 145 (atom)


state 21

   85 if_stmt: T_IF . test COLON suite elif_else_stmt

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20
    LIT_NOT        shift, and go to state 25

    test        go to state 77
    or_test     go to state 46
    and_test    go to state 47
    not_test    go to state 48
    comparison  go to state 49
    expr        go to state 51
    xor_expr    go to state 52
    and_expr    go to state 53
    shift_expr  go to state 54
    arith_expr  go to state 55
    term        go to state 56
    factor      go to state 57
    power       go to state 58
    atom        go to state 59


state 22

   89 while_stmt: T_WHILE . test COLON suite T_ELSE COLON suite
   90           | T_WHILE . test COLON suite

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20
    LIT_NOT        shift, and go to state 25

    test        go to state 78
    or_test     go to state 46
    and_test    go to state 47
    not_test    go to state 48
    comparison  go to state 49
    expr        go to state 51
    xor_expr    go to state 52
    and_expr    go to state 53
    shift_expr  go to state 54
    arith_expr  go to state 55
    term        go to state 56
    factor      go to state 57
    power       go to state 58
    atom        go to state 59


state 23

   91 for_stmt: T_FOR . exprlist T_IN testlist COLON suite T_ELSE COLON suite
   92         | T_FOR . exprlist T_IN testlist COLON suite

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20

    expr        go to state 79
    xor_expr    go to state 52
    and_expr    go to state 53
    shift_expr  go to state 54
    arith_expr  go to state 55
    term        go to state 56
    factor      go to state 57
    power       go to state 58
    atom        go to state 59
    exprlist    go to state 80


state 24

  165 classdef: CLASS . T_NAME COLON suite
  166         | CLASS . T_NAME L_PAREN R_PAREN COLON suite
  167         | CLASS . T_NAME L_PAREN parameters R_PAREN COLON suite

    T_NAME  shift, and go to state 81


state 25

  101 not_test: LIT_NOT . not_test

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 63
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    L_PAREN        shift, and go to state 13
    T_DOT_DOT_DOT  shift, and go to state 20
    LIT_NOT        shift, and go to state 25

    not_test    go to state 82
    comparison  go to state 49
    expr        go to state 51
    xor_expr    go to state 52
    and_expr    go to state 53
    shift_expr  go to state 54
    arith_expr  go to state 55
    term        go to state 56
    factor      go to state 57
    power       go to state 58
    atom        go to state 59


state 26

    0 $accept: start . $end

    $end  shift, and go to state 83


state 27

    1 start: eval_input .

    $default  reduce using rule 1 (start)


state 28

    2 start: file_input .

    $default  reduce using rule 2 (start)


state 29

    5 file_input: file_inp . END
    6 file_inp: file_inp . NEWLINE
    7         | file_inp . stmt

    NONE           shift, and go to state 1
    TRUE           shift, and go to state 2
    FALSE          shift, and go to state 3
    NEWLINE        shift, and go to state 84
    END            shift, and go to state 85
    T_NUMBER       shift, and go to state 5
    T_STRING       shift, and go to state 6
    T_NAME         shift, and go to state 7
    PLUS           shift, and go to state 8
    MULTIPLY       shift, and go to state 9
    MINUS          shift, and go to state 10
    TILDA          shift, and go to state 11
    DEF            shift, and go to state 12
    L_PAREN        shift, and go to state 13
    T_PASS         shift, and go to state 14
    T_BREAK        shift, and go to state 15
    T_CONTINUE     shift, and go to state 16
    T_RETURN       shift, and go to state 17
    IMPORT         shift, and go to state 18
    FROM           shift, and go to state 19
    T_DOT_DOT_DOT  shift, and go to state 20
    T_IF           shift, and go to state 21
    T_WHILE        shift, and go to state 22
    T_FOR          shift, and go to state 23
    CLASS          shift, and go to state 24
    LIT_NOT        shift, and go to state 25

    stmt                go to state 86
    simple_stmt         go to state 31
    small_stmt          go to state 32
    import_stmt         go to state 33
    import_name         go to state 34
    import_from         go to state 35
    expr_stmt           go to state 36
    testlist_star_expr  go to state 37
    flow_stmt           go to state 38
    compound_stmt       go to state 39
    funcdef             go to state 40
    funcall             go to state 41
    if_stmt             go to state 42
    while_stmt          go to state 43
    for_stmt            go to state 44
    test                go to state 87
    or_test             go to state 46
    and_test            go to state 47
    not_test            go to state 48
    comparison          go to state 49
    star_expr           go to state 50
    expr                go to state 51
    xor_expr            go to state 52
    and_expr            go to state 53
    shift_expr          go to state 54
    arith_expr          go to state 55
    term                go to state 56
    factor              go to state 57
    power               go to state 58
    atom                go to state 59
    classdef            go to state 61


state 30

    8 file_inp: stmt .

    $default  reduce using rule 8 (file_inp)


state 31

   10 stmt: simple_stmt .

    $default  reduce using rule 10 (stmt)


state 32

   16 simple_stmt: small_stmt . small_stmts NEWLINE
   17            | small_stmt . small_stmts SEMICOLON NEWLINE
   18            | small_stmt . NEWLINE
   19            | small_stmt . SEMICOLON NEWLINE

    NEWLINE    shift, and go to state 88
    SEMICOLON  shift, and go to state 89

    small_stmts  go to state 90


state 33

   23 small_stmt: import_stmt .

    $default  reduce using rule 23 (small_stmt)


state 34

   25 import_stmt: import_name .

    $default  reduce using rule 25 (import_stmt)


state 35

   26 import_stmt: import_from .

    $default  reduce using rule 26 (import_stmt)


state 36

   20 small_stmt: expr_stmt .

    $default  reduce using rule 20 (small_stmt)


state 37

   39 expr_stmt: testlist_star_expr . augassign testlist
   40          | testlist_star_expr . testlist_star_exprs_equal

    EQUAL                  shift, and go to state 91
    PLUS_EQUAL             shift, and go to state 92
    MINUS_EQUAL            shift, and go to state 93
    STAR_EQUAL             shift, and go to state 94
    AT_EQUAL               shift, and go to state 95
    R_SLASH_EQUAL          shift, and go to state 96
    PERCENT_EQUAL          shift, and go to state 97
    AND_EQUAL              shift, and go to state 98
    BAR_EQUAL              shift, and go to state 99
    XOR_EQUAL              shift, and go to state 100
    LESS_LESS_EQUAL        shift, and go to state 101
    GREATER_GREATER_EQUAL  shift, and go to state 102
    STAR_STAR_EQUAL        shift, and go to state 103
    SLASH_SLASH_EQUAL      shift, and go to state 104

    EQUAL     [reduce using rule 38 (testlist_star_exprs_equal)]
    $default  reduce using rule 38 (testlist_star_exprs_equal)

    testlist_star_exprs_equal  go to state 105
    augassign                  go to state 106


state 38

   22 small_stmt: flow_stmt .

    $default  reduce using rule 22 (small_stmt)


state 39

   11 stmt: compound_stmt .

    $default  reduce using rule 11 (stmt)


state 40

   77 compound_stmt: funcdef .

    $default  reduce using rule 77 (compound_stmt)


state 41

   24 small_stmt: funcall .

    $default  reduce using rule 24 (small_stmt)


state 42

   74 compound_stmt: if_stmt .

    $default  reduce using rule 74 (compound_stmt)


state 43

   75 compound_stmt: while_stmt .

    $default  reduce using rule 75 (compound_stmt)


state 44

   76 compound_stmt: for_stmt .

    $default  reduce using rule 76 (compound_stmt)


state 45

   49 testlist_star_expr: test . testlist_star_exprs_comma COMMA
   50                   | test . testlist_star_exprs_comma
   53                   | test . COMMA
   54                   | test .
  163 testlist: test . tests
  164         | test .

    COMMA  shift, and go to state 107

    NEWLINE   reduce using rule 54 (testlist_star_expr)
    NEWLINE   [reduce using rule 164 (testlist)]
    END       reduce using rule 164 (testlist)
    $default  reduce using rule 54 (testlist_star_expr)

    testlist_star_exprs_comma  go to state 108
    tests                      go to state 109


state 46

   95 test: or_test . T_IF or_test T_ELSE test
   96     | or_test .
   97 or_test: or_test . LIT_OR and_test

    T_IF    shift, and go to state 110
    LIT_OR  shift, and go to state 111

    $default  reduce using rule 96 (test)


state 47

   98 or_test: and_test .
   99 and_test: and_test . LIT_AND not_test

    LIT_AND  shift, and go to state 112

    $default  reduce using rule 98 (or_test)


state 48

  100 and_test: not_test .

    $default  reduce using rule 100 (and_test)


state 49

  102 not_test: comparison .
  103 comparison: comparison . comp_op expr

    T_IN           shift, and go to state 113
    LESS           shift, and go to state 114
    GREATER        shift, and go to state 115
    EQUAL_EQUAL    shift, and go to state 116
    GREATER_EQUAL  shift, and go to state 117
    LESS_EQUAL     shift, and go to state 118
    EXCL_EQUAL     shift, and go to state 119
    NOT_IN         shift, and go to state 120
    T_IS           shift, and go to state 121
    IS_NOT         shift, and go to state 122

    $default  reduce using rule 102 (not_test)

    comp_op  go to state 123


state 50

   51 testlist_star_expr: star_expr . testlist_star_exprs_comma COMMA
   52                   | star_expr . testlist_star_exprs_comma
   55                   | star_expr . COMMA
   56                   | star_expr .

    COMMA  shift, and go to state 124

    $default  reduce using rule 56 (testlist_star_expr)

    testlist_star_exprs_comma  go to state 125


state 51

  104 comparison: expr .
  116 expr: expr . OR xor_expr

    OR  shift, and go to state 126

    $default  reduce using rule 104 (comparison)


state 52

  117 expr: xor_expr .
  118 xor_expr: xor_expr . XOR and_expr

    XOR  shift, and go to state 127

    $default  reduce using rule 117 (expr)


state 53

  119 xor_expr: and_expr .
  120 and_expr: and_expr . AND shift_expr

    AND  shift, and go to state 128

    $default  reduce using rule 119 (xor_expr)


state 54

  121 and_expr: shift_expr .
  122 shift_expr: shift_expr . LESS_LESS arith_expr
  123           | shift_expr . GREATER_GREATER arith_expr

    LESS_LESS        shift, and go to state 129
    GREATER_GREATER  shift, and go to state 130

    $default  reduce using rule 121 (and_expr)


state 55

  124 shift_expr: arith_expr .
  125 arith_expr: arith_expr . PLUS term
  126           | arith_expr . MINUS term

    PLUS   shift, and go to state 131
    MINUS  shift, and go to state 132

    $default  reduce using rule 124 (shift_expr)


state 56

  127 arith_expr: term .
  128 term: term . R_SLASH_SLASH factor
  129     | term . MULTIPLY factor
  130     | term . T_AT factor
  131     | term . R_SLASH factor
  132     | term . PERCENT factor

    MULTIPLY       shift, and go to state 133
    R_SLASH        shift, and go to state 134
    R_SLASH_SLASH  shift, and go to state 135
    T_AT           shift, and go to state 136
    PERCENT        shift, and go to state 137

    $default  reduce using rule 127 (arith_expr)


state 57

  133 term: factor .

    $default  reduce using rule 133 (term)


state 58

  137 factor: power .

    $default  reduce using rule 137 (factor)


state 59

  138 power: atom . STAR_STAR factor
  139      | atom .

    STAR_STAR  shift, and go to state 138

    $default  reduce using rule 139 (power)


state 60

    3 eval_input: testlist . END
    4           | testlist . NEWLINE END
